--- a/pom.xml
+++ b/pom.xml
@@ -1,42 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
-         xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-    <modelVersion>4.0.0</modelVersion>
-    <groupId>org.jboss.forge.osgi</groupId>
-    <artifactId>osgi-plugin</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
-    <properties>
-        <forge.api.version>1.0.0-SNAPSHOT</forge.api.version>
-    </properties>
-    <dependencies>
-        <dependency>
-            <groupId>org.jboss.forge</groupId>
-            <artifactId>forge-shell-api</artifactId>
-            <version>${forge.api.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.jboss.forge</groupId>
-            <artifactId>forge-maven-api</artifactId>
-            <version>${forge.api.version}</version>
-        </dependency>
-        <dependency>
-         <groupId>org.jboss.forge</groupId>
-         <artifactId>forge-javaee-api</artifactId>
-         <version>${forge.api.version}</version>
-      </dependency>
-    </dependencies>
-    <build>
-        <finalName>plugin-osgi</finalName>
-        <plugins>
-            <plugin>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
-                <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+  <modelVersion>4.0.0</modelVersion>
+  <groupId>org.jboss.forge.osgi</groupId>
+  <artifactId>osgi-plugin</artifactId>
+  <version>1.0.0-SNAPSHOT</version>
+  <properties>
+    <forge.api.version>1.0.0-SNAPSHOT</forge.api.version>
+  </properties>
+  <dependencies>
+    <dependency>
+      <groupId>org.jboss.forge</groupId>
+      <artifactId>forge-shell-api</artifactId>
+      <version>1.0.0-SNAPSHOT</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.jboss.forge</groupId>
+      <artifactId>forge-maven-api</artifactId>
+      <version>1.0.0-SNAPSHOT</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.jboss.forge</groupId>
+      <artifactId>forge-javaee-api</artifactId>
+      <version>1.0.0-SNAPSHOT</version>
+      <scope>provided</scope>
+    </dependency>
+  </dependencies>
+  <build>
+    <finalName>plugin-osgi</finalName>
+    <plugins>
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>2.3.2</version>
+        <configuration>
+          <source>1.6</source>
+          <target>1.6</target>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
