--- a/pom.xml
+++ b/pom.xml
@@ -7,25 +7,25 @@
     <artifactId>osgi-plugin</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <properties>
-        <forge.api.version>1.0.0-SNAPSHOT</forge.api.version>
+        <forge.api.version>1.1.3.Final</forge.api.version>
     </properties>
     <dependencies>
         <dependency>
             <groupId>org.jboss.forge</groupId>
             <artifactId>forge-shell-api</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>${forge.api.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.jboss.forge</groupId>
             <artifactId>forge-maven-api</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>${forge.api.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.jboss.forge</groupId>
             <artifactId>forge-javaee-api</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>${forge.api.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
